vlib/v/checker/tests/fixed_array_builtin_method_args_err.out
vlib/v/checker/tests/fixed_array_builtin_method_args_err.vv:4:11: error: `.index()` expected 1 argument, but got 0
    2 |     arr := [1, 2, 3]!
    3 | 
    4 |     _ := arr.index()
      |              ~~~~~~~
    5 |     _ := arr.index('hello')
    6 |     _ := arr.contains()
vlib/v/checker/tests/fixed_array_builtin_method_args_err.vv:5:17: error: cannot use `string` as `int` in argument 1 to `.index()`
    3 | 
    4 |     _ := arr.index()
    5 |     _ := arr.index('hello')
      |                    ~~~~~~~
    6 |     _ := arr.contains()
    7 |     _ := arr.contains('hello')
vlib/v/checker/tests/fixed_array_builtin_method_args_err.vv:6:11: error: `.contains()` expected 1 argument, but got 0
    4 |     _ := arr.index()
    5 |     _ := arr.index('hello')
    6 |     _ := arr.contains()
      |              ~~~~~~~~~~
    7 |     _ := arr.contains('hello')
    8 |     _ := arr.any()
vlib/v/checker/tests/fixed_array_builtin_method_args_err.vv:7:20: error: cannot use `string` as `int` in argument 1 to `.contains()`
    5 |     _ := arr.index('hello')
    6 |     _ := arr.contains()
    7 |     _ := arr.contains('hello')
      |                       ~~~~~~~
    8 |     _ := arr.any()
    9 |     _ := arr.any(22)
vlib/v/checker/tests/fixed_array_builtin_method_args_err.vv:8:11: error: `.any` expected 1 argument, but got 0
    6 |     _ := arr.contains()
    7 |     _ := arr.contains('hello')
    8 |     _ := arr.any()
      |              ~~~~~
    9 |     _ := arr.any(22)
   10 |     _ := arr.all()
vlib/v/checker/tests/fixed_array_builtin_method_args_err.vv:9:15: error: invalid expression, expected infix expr, lambda or function
    7 |     _ := arr.contains('hello')
    8 |     _ := arr.any()
    9 |     _ := arr.any(22)
      |                  ~~
   10 |     _ := arr.all()
   11 |     _ := arr.all('hello')
vlib/v/checker/tests/fixed_array_builtin_method_args_err.vv:10:11: error: `.all` expected 1 argument, but got 0
    8 |     _ := arr.any()
    9 |     _ := arr.any(22)
   10 |     _ := arr.all()
      |              ~~~~~
   11 |     _ := arr.all('hello')
   12 | }
vlib/v/checker/tests/fixed_array_builtin_method_args_err.vv:11:15: error: type mismatch, should use e.g. `all(it > 2)`
    9 |     _ := arr.any(22)
   10 |     _ := arr.all()
   11 |     _ := arr.all('hello')
      |                  ~~~~~~~
   12 | }
