vlib/v/checker/tests/fixed_array_builtin_method_args_err.vv
fn main() {
	arr := [1, 2, 3]!

	_ := arr.index()
	_ := arr.index('hello')
	_ := arr.contains()
	_ := arr.contains('hello')
	_ := arr.any()
	_ := arr.any(22)
	_ := arr.all()
	_ := arr.all('hello')
}
